--- a/www/app/globals.css
+++ b/www/app/globals.css
@@ -58,3 +58,20 @@ body {
 * {
   border-color: var(--color-border);
 }
+
+/* Color picker styles - remove default browser styling */
+/* Source: https://stackoverflow.com/questions/11167281/webkit-css-to-control-the-box-around-the-color-in-an-inputtype-color */
+input[type="color"] {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  border: none;
+}
+
+input[type="color"]::-webkit-color-swatch-wrapper {
+  padding: 0;
+}
+
+input[type="color"]::-webkit-color-swatch {
+  border: none;
+}
